# Predictive-Poultry-Systems

./: .gitignore  .pre-commit-config.yaml  GEMINI.md  README.md  main.py  pyproject.toml  simulation_metrics.sqlite  youtube-to-obsidian.skill
.github/workflows/: claude-code-review.yml  claude-pr-review-comprehensive.yml  claude-review.yml  tests-with-cov.yml
.planning/: REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/01-foundation-baseline/: 01-PLAN.md  01-RESEARCH.md  01-SUMMARY.md  01-VALIDATION.md
.planning/phases/02-operational-assets/: 02-PLAN.md  02-SUMMARY.md  02-VALIDATION.md
.planning/phases/03-agentic-workforce-logistics/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-CONTEXT.md  03-DISCUSSION-LOG.md  03-RESEARCH.md
.planning/phases/04-cycle-integration/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-RESEARCH.md
.planning/phases/05-throughput-optimization/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-03-PLAN.md  05-03-SUMMARY.md  05-RESEARCH.md
.planning/phases/06-custom-engine-research/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-02-SUMMARY.md  06-RESEARCH.md  ECONOMIC_DESIGN.md  ENGINE_REQUIREMENTS.md
src/predictive_poultry_systems/: config.py
tests/: test_agent_behavior.py  test_agents.py  test_ai_integration.py  test_behavior_framework.py  test_behavior_metrics.py  test_bt_salabim.py  test_data_metrics.py  test_env.py  test_fulfillment_audit.py  test_main.py  test_objects.py
youtube-to-obsidian/: SKILL.md
youtube-to-obsidian/references/: obsidian_template.md
youtube-to-obsidian/scripts/: get_transcript.py
(+30 files in other folders)
