[project]
name = "predictive-poultry-systems"
version = "0.1.0"
description = "High-fidelity Digital Twin simulation for poultry fulfillment nodes."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "Pillow>=10.0.0",
    "faker>=40.12.0",
    "greenlet>=3.3.2",
    "logfire>=4.31.0",
    "prek>=0.3.8",
    "pydantic>=2.12.5",
    "pydantic-ai>=1.77.0",
    "ruff>=0.15.9",
    "salabim>=24.0.12",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/predictive_poultry_systems"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
addopts = "--cov=predictive_poultry_systems --cov-report=term-missing"
